...
            android:layout_centerVertical="true"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/projectDoneButton"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/create"
            android:textColor="@color/md_pink_a200" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/md_grey_500"
        android:inputType="textCapSentences"
        android:textCursorDrawable="@drawable/edit_text_cursor" />

...
