...
            android:text="@string/new_idea"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/doneButton"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/create"
            android:textColor="@color/md_pink_a200" />
    </RelativeLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edit_idea"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences|textMultiLine"
        android:textColorHint="@color/md_grey_500"
...
