<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/priorityTag"
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:background="@color/md_black"
        android:visibility="gone" />

    <TextView
        android:textColor="#787878"
        android:textSize="22sp"
        android:padding="16dp"
        android:id="@+id/txtView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>