...
    <string name="drawer_close">Close navigation drawer</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="functions_label">Functions</string>
    <string name="rename_pro">Rename project</string>
    <string name="delete_pro">Delete project</string>
    <string name="delete">DELETE</string>
    <string name="create">CREATE</string>
    <string name="close">CLOSE</string>
    <string name="rename">RENAME</string>
    <string name="all_pro">All projects</string>
    <string name="new_pro">New project</string>
    <string name="dark_col">Dark Theme</string>
    <string name="primary_col">Primary color</string>
...
